# psychic-succotash

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_.md  app.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pytest.ini  settings.py  settings.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
docs/: client_spec.txt
frontend/: Dockerfile  Dockerfile.dev  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: FileUpload.css  FileUpload.js
nginx/: default.conf
notebooks/: CNN.ipynb  CNN_inference.ipynb  inference.ipynb  kmeans.ipynb  kmeans_inference.ipynb  metadata.csv  overview.ipynb
resources/: kmeans_model_run.pkl  mars.mid
scripts/: generate_dataset.py  start_server.py  train_kmeans.py
src/classical_composer/: __about__.py  __init__.py  data.py  frames.py  kmeans.py  utility.py
src/classical_composer/api/: server.py
src/classical_composer/features/: __init__.py  featuerizer.py  feature_extractor.py  feature_function.py  frequency.py  harmonic.py  higher_level.py  pitch.py  temporal.py  velo.py
src/classical_composer/misc/: __init__.py  command_line.py  logging.py  pipeline.py
tests/data/: test_data.py
tests/frames/: test_extract_random_frames.py  test_generate_random_frame_indicies.py  test_get_fixed_frame_indicies.py
